<resources>
    <string name="app_name">Body Mass Index</string>
    <string name="calculate">Calculate</string>
    <string name="in_fit">feet"</string>
    <string name="Hin_inch">inches </string>
    <string name="over">you are over weight</string>
    <string name="stream">Obesity</string>
    <string name="normal">Good Health/Normal</string>
    <string name="under">Underweight/increase weight</string>
    <string name="bmi">BMI</string>
    <string name="enter_height_in_cm">Enter Height in cm</string>
    <string name="enter_weight_in_kg">Enter Weight in kg</string>
    <string name="enter_your_height">Enter your height</string>
    <string name="reset">RESET</string>
</resources>