<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/linear"

    tools:context=".MainActivity">

    <TextView
        android:id="@+id/BMI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/bmi"
        android:layout_marginTop="20dp"
        android:textColor="#FF5722"
        android:textSize="54sp"
        android:textStyle="italic" />


    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:fontFamily="@font/berkshire_swash"
        android:textColor="@color/black"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textUh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/enter_your_height"
        android:textColor="#0529F3"
        android:textSize="20sp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >

    <EditText
        android:id="@+id/fit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:ems="5"
        android:layout_margin="4dp"
        android:inputType="number"
        android:hint="@string/in_fit"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:minHeight="48dp"
         />


    <EditText
        android:id="@+id/inch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:inputType="number"
        android:textAlignment="center"
        android:hint="@string/Hin_inch"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:minHeight="48dp"
        />
    </LinearLayout>


    <EditText
        android:id="@+id/weight"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/enter_weight_in_kg"
        android:inputType="number"
        android:textSize="16sp"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/black" />
    <TextView
        android:id="@+id/totalBmi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/calculate"
        android:textAlignment="center"
        android:textColor="#F7F6F8" />
    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/reset"
        android:textAlignment="center"
        android:textColor="#F7F6F8" />


</LinearLayout>